--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ yarn-error.log*
 next-env.d.ts
 
 desafio-luizalabs-github.md
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
