--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.28",
     "next-themes": "^0.4.6",
