--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "happy-dom": "^17.5.6",
     "tailwindcss": "^4",
     "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.4"
   }
 }
