--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@serwist/next": "^9.0.14",
     "@sentry/nextjs": "^9.26.0",
+    "@serwist/next": "^9.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
@@ -24,9 +24,9 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "serwist": "^9.0.14",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
-    "serwist": "^9.0.14",
     "tw-animate-css": "^1.3.3"
   },
   "devDependencies": {
@@ -42,7 +42,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.5.0",
+    "@vitest/coverage-istanbul": "^3.2.1",
     "happy-dom": "^17.5.6",
+    "sonar-scanner": "^3.1.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
