chore: update SonarQube workflow and package configuration for improved module support

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -17,14 +17,18 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'pnpm'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Run tests with coverage (Vitest)
-        run: npm run test
+        run: pnpm run test
 
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: npx sonar-scanner
+        run: pnpm exec sonar-scanner
