--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["vitest/globals", "@serwist/next/typings"],
+    "types": ["vitest/globals", "@serwist/next/typings"]
   },
   "include": ["next-env.d.ts", "next-auth.d", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
