--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -36,4 +36,6 @@ jobs:
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+          SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
         run: pnpm exec sonar-scanner
