--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=${SONAR_PROJECT_KEY}
-sonar.organization=${SONAR_ORGANIZATION}
+sonar.projectKey=vinebarbosa_github-desktop-pwa
+sonar.organization=vinebarbosa
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
 
