--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,31 @@ jobs:
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20]
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Run tests with coverage (Vitest)
+        run: pnpm run test
+
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
