--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.test.inclusions=**/*.spec.ts,**/*.spec.tsx
 
 sonar.typescript.tsconfigPath=tsconfig.json
 
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 sonar.exclusions=**/node_modules/**
