--- a/.gitignore
+++ b/.gitignore
@@ -42,16 +42,9 @@ next-env.d.ts
 
 desafio-luizalabs-github.md
 
-# Playwright
-node_modules/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
-
 # Sentry Config File
 .env.sentry-build-plugin
 
 certificates
 
-public/sw.js
+public/sw.js**
