--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "luizalabs-frontend-challenge",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "cypress run",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -20,6 +21,7 @@
     "@serwist/next": "^9.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.28",
@@ -34,7 +36,6 @@
   "devDependencies": {
     "@arthurfiorette/biomejs-config": "^1.0.8",
     "@biomejs/biome": "^1.9.4",
-    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -46,6 +47,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.5.0",
     "@vitest/coverage-istanbul": "^3.2.1",
+    "cypress": "^14.4.1",
     "happy-dom": "^17.5.6",
     "sonar-scanner": "^3.1.0",
     "tailwindcss": "^4",
