--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -7,44 +7,14 @@ on:
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20]
-
+    runs-on: ubuntu-24.04
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 8
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build project
-        run: pnpm build
-
-      - name: Start app (background)
-        run: pnpm start &
-        env:
-          NODE_ENV: test
-
-      - name: Wait for app to be ready
-        run: npx wait-on http://localhost:3000
-
-      - name: Run Cypress tests
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: false
-          wait-on: 'http://localhost:3000'
-        env:
-          TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
+          build: npm run build
+          start: npm start
