--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,30 +5,28 @@ on:
     branches: [main]
   pull_request:
 
+
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        node-version: [20]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-
-      - name: Setup pnpm
+      - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10
 
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build project
-        run: pnpm build
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
