--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,7 +5,6 @@ on:
     branches: [main]
   pull_request:
 
-
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
@@ -27,6 +26,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Install Cypress binary
+        run: pnp dlx cypress install
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
