--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -42,4 +42,6 @@ jobs:
         env:
           TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
           AUTH_TRUST_HOST: ${{ secrets.AUTH_TRUST_HOST }}
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           NEXT_PUBLIC_MODE: ${{ secrets.NEXT_PUBLIC_MODE }}
+
