refactor: update app name and title to 'Luiza Hub'

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Meu App",
-  "short_name": "App",
+  "name": "Luiza Hub",
+  "short_name": "Luhub",
   "start_url": "/",
   "display": "standalone",
   "icons": [
